--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,8 +3,8 @@
         <div class="container">
             <h1>My Day</h1>
             <p>All my tasks in one place</p>
-            <input class="new-todo" placeholder="Type new todo" autofocus type="text"
-                [formControl]="newTaskCtrl" (keydown.enter)="changeHandler()"/>
+            <input class="new-todo" placeholder="Type new todo" autofocus type="text" [formControl]="newTaskCtrl"
+                (keydown.enter)="changeHandler()" />
         </div>
     </header>
     <div class="container todoapp-wrapper">
@@ -16,13 +16,14 @@
         </pre>
         <section class="main">
             <ul class="todo-list">
-                <li *ngFor="let task of tasks(); index as i">
+                <li (dblclick)="updateTaskEditingMode(i)" *ngFor="let task of tasksByFilter(); index as i"
+                    [class.completed]="task.completed" [class.editing]="task.editing">
                     <div class="view">
                         <input class="toggle" type="checkbox" [checked]="task.completed" (change)="updateTask(i)" />
                         <label>{{ task.title }}</label>
                         <button class="destroy" (click)="deleteTask(i)"></button>
                     </div>
-                    <input class="edit" value="Buy a unicorn" />
+                    <input class="edit" (keydown.enter)="updateTaskText(i,$event)" [value]="task.title" />
                 </li>
                 <!-- <li class="completed">
           <div class="view">
@@ -53,19 +54,19 @@
         <!-- This footer should be hidden by default and shown when there are todos -->
         <footer class="footer">
             <!-- This should be `0 items left` by default -->
-            <span class="todo-count"><strong>{{tasks().length}} </strong>
-                <span *ngIf="tasks().length===1; else elseBlock">item</span>
+            <span class="todo-count"><strong>{{ tasksByFilter().length }} </strong>
+                <span *ngIf="tasksByFilter().length === 1; else elseBlock">item</span>
                 <ng-template #elseBlock>items</ng-template></span>
             <!-- Remove this if you don't implement routing -->
             <ul class="filters">
                 <li>
-                    <a routerLink="/" class="selected">All</a>
+                    <a (click)="changeFilter('all')" [class.selected]="filter()==='all'">All</a>
                 </li>
                 <li>
-                    <a routerLink="/pending">Pending</a>
+                    <a (click)="changeFilter('pending')" [class.selected]="filter()==='pending'">Pending</a>
                 </li>
                 <li>
-                    <a routerLink="/completed">Completed</a>
+                    <a (click)="changeFilter('completed')" [class.selected]="filter()==='completed'">Completed</a>
                 </li>
             </ul>
             <!-- Hidden if no completed items are left ↓ -->
