--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -52,4 +52,20 @@
   <hr>
   <input type="color" [formControl]="colorCtrl">
   <p>Color: {{colorCtrl.value}}</p>
+  <svg>
+    <g>
+      <rect x="0" y="0" height="100" width="100" [attr.fill]="colorCtrl.value" />
+    </g>
+  </svg>
+  <hr>
+  <input type="number" [formControl]="widthCtrl">
+  <span class="box" [style.width.px]="widthCtrl.value"></span>
+  <hr>
+  <p>
+    <input type="text" [formControl]="nameCtrl"><br>
+    <span class="message-error" [class.show]="nameCtrl.invalid && nameCtrl.touched">Nombre invalid o</span>
+  </p>
+  <p>
+    <input type="text">
+  </p>
 </div>
