--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -2,9 +2,11 @@
   <h1>Esta es mi primer app de Angular</h1>
   <h2>{{ welcome }}</h2>
   <ul>
-    <li *ngFor="let task of tasks()">
+    @for (task of tasks(); track task) {
+    <li>
       {{ task }}
     </li>
+    }
   </ul>
   <hr />
   <h2>{{ "Hola".repeat(4) }}</h2>
@@ -26,46 +28,105 @@
   <input type="text" [value]="person().name" (keydown.shift.t)="clickHandler()" />
   <ul>
     <p>Total: {{ tasks().length }}</p>
-    <li *ngFor="let task of tasks(); index as i">{{ i }} {{ task }}</li>
+    @for (task of tasks(); track task; let i = $index) {
+    <li>{{ i }} {{ task }}</li>
+    }
   </ul>
   <hr />
   <h1>Signals</h1>
   <input type="text" [value]="name()" (change)="changeHandler($event)" />
   <hr />
-  <div *ngIf="1 !== 1">My content</div>
-  <div *ngIf="name() === 'Edwin'">Soy Edwin</div>
+  @if (1 !== 1) {
+  <div>My content</div>
+  }
+  @if (name() === 'Edwin') {
+  <div>Soy Edwin</div>
+  }
   <input type="number" [value]="person().age" (change)="changeAge($event)" />
-  <div *ngIf="person().name === 'Edwin' && person().age > 18; else elseBlock">
+  @if (person().name === 'Edwin' && person().age > 18) {
+  <div>
     Soy Edwin y soy mayor de 18
   </div>
-  <ng-template #elseBlock>
-    Soy Edwin y soy menor de 18
-  </ng-template>
-  <hr>
+  } @else {
+  Soy Edwin y soy menor de 18
+  }
+  <hr />
   <input type="text" [value]="person().name" (change)="changeName($event)" />
-  <div [ngSwitch]="person().name">
-    <p *ngSwitchCase="'marco'">yo soy marco</p>
-    <p *ngSwitchCase="'Edwin'">yo soy Edwin</p>
-    <p *ngSwitchCase="'julian'">yo soy julian</p>
-    <p *ngSwitchDefault>Yo no soy nadie</p>
+  <div>
+    @switch (person().name) {
+    @case ('marco') {
+    <p>yo soy marco</p>
+    }
+    @case ('Edwin') {
+    <p>yo soy Edwin</p>
+    }
+    @case ('julian') {
+    <p>yo soy julian</p>
+    }
+    @default {
+    <p>Yo no soy nadie</p>
+    }
+    }
   </div>
-  <hr>
-  <input type="color" [formControl]="colorCtrl">
-  <p>Color: {{colorCtrl.value}}</p>
+  <hr />
+  <input type="color" [formControl]="colorCtrl" />
+  <p>Color: {{ colorCtrl.value }}</p>
   <svg>
     <g>
       <rect x="0" y="0" height="100" width="100" [attr.fill]="colorCtrl.value" />
     </g>
   </svg>
-  <hr>
-  <input type="number" [formControl]="widthCtrl">
+  <hr />
+  <input type="number" [formControl]="widthCtrl" />
   <span class="box" [style.width.px]="widthCtrl.value"></span>
-  <hr>
+  <hr />
   <p>
-    <input type="text" [formControl]="nameCtrl"><br>
+    <input type="text" [formControl]="nameCtrl" /><br />
     <span class="message-error" [class.show]="nameCtrl.invalid && nameCtrl.touched">Nombre invalid o</span>
   </p>
   <p>
-    <input type="text">
+    <input type="text" />
   </p>
+  <hr />
+  <h2>New for</h2>
+  <ul>
+    <p>Total: {{ tasks().length }}</p>
+    @for (task of tasks(); track task; let i = $index) {
+    <li>{{ i }} {{ task }}</li>
+    }
+  </ul>
+  <ul>
+    @for (task of tasks(); track $index) {
+    <li>{{ $index }} {{ task }}</li>
+    }@empty {
+    <li><strong>La lista esta vacía</strong></li>
+    }
+  </ul>
+  <hr />
+  <h2>New Switch</h2>
+  <div>
+    @switch (person().name) {
+    @case ('marco') {
+    <p>yo soy marco</p>
+    }
+    @case ('Edwin') {
+    <p>yo soy Edwin</p>
+    }
+    @case ('julian') {
+    <p>yo soy julian</p>
+    }
+    @default {
+    <p>Yo no soy nadie</p>
+    }
+    }
+  </div>
+  <div>
+    @switch (person().name) { @case ('nicolas') {
+    <p>Yo soy nicolas</p>
+    } @case ('Edwin') {
+    <p>Soy Edwin</p>
+    } @default {
+    <p>Yo no soy nadie</p>
+    } }
+  </div>
 </div>
